[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schedq"
version = "0.0.4"
description = "Lightweight, high-performance asynchronous task scheduling engine with no external dependencies."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="Élcio M. Fernandes", email="elciomfer@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]